--- a/.astropod/astropod.config.json
+++ b/.astropod/astropod.config.json
@@ -1,23 +1,24 @@
 {
   "copyright": "",
-  "theme": "light",
+  "theme": "emerald",
   "fundingText": "",
-  "author": "Author's name",
-  "name": "Podcast Name",
-  "banner": "/banner.webp",
+  "author": "Studio Presley",
+  "name": "Hour of Excellence – A Podcast Honoring Dignitaries",
+  "banner": "/black-white-minimalist-business-logo-3500-×-750-px-3000-×-750-px-.png",
   "pageSize": 15,
   "fundingUrl": "",
   "owner": "",
   "favicon": "/favicon.svg",
   "explicit": false,
-  "cover": "/cover.jpg",
+  "cover": "/black-and-gold-classy-minimalist-circular-name-logo.png",
   "language": "en",
-  "link": "https://your-website-url.netlify.app",
-  "email": "your.email@gmail.com",
-  "description": "A short description of your podcast. We suggest creating a podcast description between 600-900 characters or 120-170 words in length.",
+  "link": "https://hourofexcellence.com",
+  "email": "ipresleypete@gmail.com",
+  "description": "The podcast explores a wide range of topics related to community service and excellence, such as volunteerism, advocacy, social justice and community building.",
   "category": [
-    "Technology",
-    "Business"
+    "Education",
+    "Religion &amp; Spirituality",
+    "Kids &amp; Family"
   ],
   "feedSize": ""
 }
