Update Settings “general”

--- a/.astropod/astropod.config.json
+++ b/.astropod/astropod.config.json
@@ -1,6 +1,6 @@
 {
   "copyright": "",
-  "theme": "emerald",
+  "theme": "black",
   "fundingText": "",
   "author": "Studio Presley",
   "name": "Hour of Excellence – A Podcast Honoring Dignitaries",
