Update Settings “follow”

--- a/.astropod/social.config.json
+++ b/.astropod/social.config.json
@@ -1,5 +1,5 @@
 {
-  "facebook": "",
+  "facebook": "https://facebook.com/HourOfExcellence",
   "twitter": "",
   "youtube": "",
   "instagram": "",
