Update Settings “general”

--- a/.astropod/astropod.config.json
+++ b/.astropod/astropod.config.json
@@ -1,9 +1,9 @@
 {
   "copyright": "",
-  "theme": "black",
+  "theme": "business",
   "fundingText": "",
   "author": "Studio Presley",
-  "name": "Hour of Excellence – A Podcast Honoring Dignitaries",
+  "name": "Hour of Excellence: A Podcast Honoring Dignitaries",
   "banner": "/black-white-minimalist-business-logo-3500-×-750-px-3000-×-750-px-.png",
   "pageSize": 15,
   "fundingUrl": "",
