Update Settings “general”

--- a/.astropod/astropod.config.json
+++ b/.astropod/astropod.config.json
@@ -1,10 +1,10 @@
 {
   "copyright": "",
-  "theme": "business",
+  "theme": "winter",
   "fundingText": "",
   "author": "Studio Presley",
   "name": "Hour of Excellence: A Podcast Honoring Dignitaries",
-  "banner": "/black-white-minimalist-business-logo-3500-×-750-px-3000-×-750-px-.png",
+  "banner": "/black-white-minimalist-business-logo-3500-×-750-px-3000-×-750-px-1-.png",
   "pageSize": 15,
   "fundingUrl": "",
   "owner": "",
