--- a/.astropod/astropod.config.json
+++ b/.astropod/astropod.config.json
@@ -4,7 +4,7 @@
   "fundingText": "",
   "author": "Studio Presley",
   "name": "Hour of Excellence: A Podcast Honoring Dignitaries",
-  "banner": "/black-white-minimalist-business-logo-3500-×-750-px-3000-×-750-px-4-.png",
+  "banner": "/black-white-minimalist-business-logo.png",
   "pageSize": 15,
   "fundingUrl": "",
   "owner": "",
