--- a/.astropod/listenOn.config.json
+++ b/.astropod/listenOn.config.json
@@ -8,5 +8,5 @@
   "acastPodcasts": "",
   "fountain": "",
   "spotify": "https://open.spotify.com/show/3QvK66naZU3oVWIyvbbq28",
-  "pocketcasts": ""
+  "redcircle": ""
 }
