Update Settings “general”

--- a/.astropod/astropod.config.json
+++ b/.astropod/astropod.config.json
@@ -14,7 +14,7 @@
   "language": "en",
   "link": "https://hourofexcellence.com",
   "email": "ipresleypete@gmail.com",
-  "description": "The podcast explores a wide range of topics related to community service and excellence, such as volunteerism, advocacy, social justice and community building.\n\n\"Hour of Excellence\" is a podcast that produces content honoring dignitaries of all ages. ﻿Based in Lake City, Florida.\n\nThe podcast explores a wide range of topics related to community service and excellence, such as volunteerism, advocacy, social justice and community building. \n\nEach episode is a thought provoking and inspiring exploration of the importance of community service and the role it plays in achieving excellence. It encourages young people to look beyond themselves and to think about how they can make a positive impact on their communities and the world around them.\n\n",
+  "description": "\"Hour of Excellence\" is a podcast that produces content honoring dignitaries of all ages. ﻿The podcast is based in Lake City, Florida.\n\nThe podcast explores a wide range of topics related to community service and excellence, such as volunteerism, advocacy, social justice and community building. \n\nEach episode is a thought-provoking and inspiring exploration of the importance of community service and the role it plays in achieving excellence. It encourages young people to look beyond themselves and to think about how they can make a positive impact on their communities and the world around them.\n\n",
   "category": [
     "Education",
     "Religion &amp; Spirituality",
