Update Settings “general”

--- a/.astropod/astropod.config.json
+++ b/.astropod/astropod.config.json
@@ -8,9 +8,9 @@
   "pageSize": 15,
   "fundingUrl": "",
   "owner": "",
-  "favicon": "/pink-yellow-star-y2k-style-streetwear-logo-2-.png",
+  "favicon": "/hourofexcellencelogo.png",
   "explicit": false,
-  "cover": "/pink-yellow-star-y2k-style-streetwear-logo-2-.png",
+  "cover": "/hourofexcellencelogo.png",
   "language": "en",
   "link": "https://hourofexcellence.com",
   "email": "ipresleypete@gmail.com",
