Update Settings “general”

--- a/.astropod/astropod.config.json
+++ b/.astropod/astropod.config.json
@@ -1,5 +1,5 @@
 {
-  "copyright": "",
+  "copyright": "Studio Presley 2025",
   "theme": "winter",
   "fundingText": "",
   "author": "Studio Presley",
